--- a/index.html
+++ b/index.html
@@ -2,55 +2,50 @@
 <html lang="en">
 <head>
   <link rel="manifest" href="manifest.json">
-<meta charset="UTF-8">
-<title>S13Chat</title>
-<style>
-/* ===== General ===== */
-body { margin:0; font-family:'Segoe UI',sans-serif; background:#0b0b0b; color:limegreen; display:flex; height:100vh; overflow:hidden; }
-a { color:limegreen; text-decoration:none; }
+  <meta charset="UTF-8">
+  <title>S13Chat</title>
+  <style>
+    /* ===== General ===== */
+    body { margin:0; font-family:'Segoe UI',sans-serif; background:#0b0b0b; color:limegreen; display:flex; height:100vh; overflow:hidden; }
+    a { color:limegreen; text-decoration:none; }
 
-/* ===== Sidebar / Servers ===== */
-#sidebar {
-  width:220px; background:#111; border-right:2px solid limegreen; display:flex; flex-direction:column; padding:12px;
-}
-#sidebar h2 { text-align:center; font-size:20px; margin-bottom:12px; text-shadow:0 0 8px limegreen; }
-.server { padding:8px 12px; margin:4px 0; border-radius:8px; cursor:pointer; background:#000; transition:0.3s; }
-.server.active, .server:hover { background:limegreen; color:black; }
-#createServerBtn { padding:6px; margin-top:6px; background:black; border:1px solid limegreen; color:limegreen; border-radius:6px; cursor:pointer; }
+    /* ===== Sidebar / Servers ===== */
+    #sidebar { width:220px; background:#111; border-right:2px solid limegreen; display:flex; flex-direction:column; padding:12px; }
+    #sidebar h2 { text-align:center; font-size:20px; margin-bottom:12px; text-shadow:0 0 8px limegreen; }
+    .server { padding:8px 12px; margin:4px 0; border-radius:8px; cursor:pointer; background:#000; transition:0.3s; }
+    .server.active, .server:hover { background:limegreen; color:black; }
+    #createServerBtn { padding:6px; margin-top:6px; background:black; border:1px solid limegreen; color:limegreen; border-radius:6px; cursor:pointer; }
 
-/* ===== Chat area ===== */
-#chatArea { flex:1; display:flex; flex-direction:column; }
-#chatWindow { flex:1; overflow-y:auto; padding:12px; display:flex; flex-direction:column; gap:12px; }
-.bubble { max-width:65%; padding:12px 16px; border-radius:16px; word-wrap:break-word; font-size:18px; line-height:1.4; box-shadow:0 0 10px rgba(0,255,0,0.4); }
-.user { align-self:flex-end; background:#32ff32; color:black; border-bottom-right-radius:0; }
-.other { align-self:flex-start; background:#004400; color:white; border-bottom-left-radius:0; }
-.username { font-size:14px; opacity:0.7; margin-bottom:4px; font-weight:bold; text-shadow:0 0 4px limegreen; }
-.timestamp { font-size:10px; opacity:0.6; margin-top:2px; }
+    /* ===== Chat area ===== */
+    #chatArea { flex:1; display:flex; flex-direction:column; }
+    #chatWindow { flex:1; overflow-y:auto; padding:12px; display:flex; flex-direction:column; gap:12px; }
+    .bubble { max-width:65%; padding:12px 16px; border-radius:16px; word-wrap:break-word; font-size:18px; line-height:1.4; box-shadow:0 0 10px rgba(0,255,0,0.4); }
+    .user { align-self:flex-end; background:#32ff32; color:black; border-bottom-right-radius:0; }
+    .other { align-self:flex-start; background:#004400; color:white; border-bottom-left-radius:0; }
+    .username { font-size:14px; opacity:0.7; margin-bottom:4px; font-weight:bold; text-shadow:0 0 4px limegreen; }
+    .timestamp { font-size:10px; opacity:0.6; margin-top:2px; }
 
-/* ===== Typing notification ===== */
-#typingDiv { font-size:12px; color:limegreen; margin-left:4px; }
+    /* ===== Typing notification ===== */
+    #typingDiv { font-size:12px; color:limegreen; margin-left:4px; }
 
-/* ===== Input Area ===== */
-#inputArea { display:flex; padding:12px; border-top:2px solid limegreen; background:#111; }
-#chatInput { flex:1; padding:12px; border-radius:8px; border:none; background:#0a0a0a; color:limegreen; font-size:16px; }
-#sendBtn { margin-left:8px; padding:12px 18px; border:none; border-radius:8px; background:limegreen; color:black; cursor:pointer; font-weight:bold; font-size:16px; box-shadow:0 0 12px limegreen; transition:0.3s; }
-#sendBtn:hover { background:black; color:limegreen; transform:scale(1.05); box-shadow:0 0 20px limegreen; }
+    /* ===== Input Area ===== */
+    #inputArea { display:flex; padding:12px; border-top:2px solid limegreen; background:#111; }
+    #chatInput { flex:1; padding:12px; border-radius:8px; border:none; background:#0a0a0a; color:limegreen; font-size:16px; }
+    #sendBtn { margin-left:8px; padding:12px 18px; border:none; border-radius:8px; background:limegreen; color:black; cursor:pointer; font-weight:bold; font-size:16px; box-shadow:0 0 12px limegreen; transition:0.3s; }
+    #sendBtn:hover { background:black; color:limegreen; transform:scale(1.05); box-shadow:0 0 20px limegreen; }
 
-/* ===== Login Overlay ===== */
-#loginOverlay {
-  position:fixed; inset:0; background:rgba(0,0,0,0.97);
-  display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999;
-}
-#loginOverlay h1 { font-size:36px; margin-bottom:20px; text-shadow:0 0 8px limegreen; }
-#loginOverlay input { padding:12px; margin:6px 0; width:260px; border-radius:8px; border:1px solid limegreen; background:#111; color:limegreen; font-size:16px; }
-#loginOverlay button { padding:12px 18px; margin-top:10px; border:none; border-radius:8px; background:limegreen; color:black; cursor:pointer; font-weight:bold; font-size:16px; box-shadow:0 0 12px limegreen; transition:0.3s; }
-#loginOverlay button:hover { background:black; color:limegreen; transform:scale(1.05); box-shadow:0 0 20px limegreen; }
+    /* ===== Login Overlay ===== */
+    #loginOverlay { position:fixed; inset:0; background:rgba(0,0,0,0.97); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999; }
+    #loginOverlay h1 { font-size:36px; margin-bottom:20px; text-shadow:0 0 8px limegreen; }
+    #loginOverlay input { padding:12px; margin:6px 0; width:260px; border-radius:8px; border:1px solid limegreen; background:#111; color:limegreen; font-size:16px; }
+    #loginOverlay button { padding:12px 18px; margin-top:10px; border:none; border-radius:8px; background:limegreen; color:black; cursor:pointer; font-weight:bold; font-size:16px; box-shadow:0 0 12px limegreen; transition:0.3s; }
+    #loginOverlay button:hover { background:black; color:limegreen; transform:scale(1.05); box-shadow:0 0 20px limegreen; }
 
-/* ===== Scrollbar ===== */
-#chatWindow::-webkit-scrollbar { width:10px; }
-#chatWindow::-webkit-scrollbar-thumb { background:limegreen; border-radius:6px; }
-#chatWindow::-webkit-scrollbar-track { background:#111; }
-</style>
+    /* ===== Scrollbar ===== */
+    #chatWindow::-webkit-scrollbar { width:10px; }
+    #chatWindow::-webkit-scrollbar-thumb { background:limegreen; border-radius:6px; }
+    #chatWindow::-webkit-scrollbar-track { background:#111; }
+  </style>
 </head>
 <body>
 
@@ -81,8 +76,9 @@ a { color:limegreen; text-decoration:none; }
 </div>
 
 <script>
-// ===== LocalStorage Servers =====
-let servers = JSON.parse(localStorage.getItem('s13chat_servers')) || {};
+const BACKEND_URL = "https://YOUR_RAILWAY_URL"; // <-- replace with your Railway backend URL
+
+let servers = {};
 let currentServer = null;
 let username = null;
 
@@ -99,53 +95,62 @@ const loginMsg = document.getElementById('loginMsg');
 const newServerInput = document.getElementById('newServerInput');
 const createServerBtn = document.getElementById('createServerBtn');
 
-// ===== Login / Create Account =====
-loginBtn.addEventListener('click', ()=>{
+// ===== Login =====
+loginBtn.addEventListener('click', async () => {
   const name = usernameInput.value.trim();
-  if(!name){ loginMsg.textContent = "Enter a username!"; return; }
+  if (!name) { loginMsg.textContent = "Enter a username!"; return; }
   username = name;
-  loginOverlay.style.display='none';
+  loginOverlay.style.display = 'none';
   chatInput.disabled = false;
   sendBtn.disabled = false;
-  renderServerList();
+  await fetchData();
 });
 
+// ===== Fetch servers and messages from backend =====
+async function fetchData() {
+  const res = await fetch(`${BACKEND_URL}/data`);
+  servers = await res.json();
+  if (!currentServer) currentServer = Object.keys(servers)[0] || null;
+  renderServerList();
+  renderMessages();
+}
+
 // ===== Servers =====
-function renderServerList(){
+function renderServerList() {
   serverList.innerHTML = "";
-  for(const s in servers){
+  for (const s in servers) {
     const div = document.createElement('div');
-    div.className = 'server'+(s===currentServer?' active':'');
+    div.className = 'server' + (s === currentServer ? ' active' : '');
     div.textContent = s;
-    div.onclick = ()=>switchServer(s);
+    div.onclick = () => switchServer(s);
     serverList.appendChild(div);
   }
 }
 
-function createServer(){
+createServerBtn.addEventListener('click', async () => {
   const name = newServerInput.value.trim();
-  if(!name) return;
-  if(!servers[name]) servers[name] = { messages: [] };
-  localStorage.setItem('s13chat_servers', JSON.stringify(servers));
+  if (!name) return;
+  await fetch(`${BACKEND_URL}/server`, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ server: name })
+  });
   newServerInput.value = '';
-  switchServer(name);
-  renderServerList();
-}
+  currentServer = name;
+  await fetchData();
+});
 
-createServerBtn.addEventListener('click', createServer);
-
-// Switch server
-function switchServer(name){
+function switchServer(name) {
   currentServer = name;
   renderServerList();
   renderMessages();
 }
 
 // ===== Render messages =====
-function renderMessages(){
+function renderMessages() {
   chatWindow.innerHTML = '';
   const msgs = servers[currentServer]?.messages || [];
-  msgs.forEach(msg=>{
+  msgs.forEach(msg => {
     const container = document.createElement('div');
     const nameDiv = document.createElement('div');
     nameDiv.className = 'username';
@@ -153,7 +158,7 @@ function renderMessages(){
     container.appendChild(nameDiv);
 
     const bubble = document.createElement('div');
-    bubble.className = (msg.username===username)?'bubble user':'bubble other';
+    bubble.className = (msg.username === username) ? 'bubble user' : 'bubble other';
     bubble.textContent = msg.text;
     container.appendChild(bubble);
     chatWindow.appendChild(container);
@@ -163,31 +168,34 @@ function renderMessages(){
 
 // ===== Typing Notification =====
 let typing = false;
-chatInput.addEventListener('input', ()=>{
+chatInput.addEventListener('input', () => {
   typing = chatInput.value.length > 0;
   typingDiv.textContent = typing ? `${username} is typing...` : '';
 });
 
 // ===== Send Message =====
-function sendMessage(){
+async function sendMessage() {
   const text = chatInput.value.trim();
-  if(!text || !currentServer) return;
+  if (!text || !currentServer) return;
   chatInput.value = '';
-  const msg = { text, username, time: new Date().toISOString() };
-  servers[currentServer].messages.push(msg);
-  localStorage.setItem('s13chat_servers', JSON.stringify(servers));
-  renderMessages();
+  await fetch(`${BACKEND_URL}/message`, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ server: currentServer, username, text })
+  });
+  await fetchData();
   typingDiv.textContent = '';
 }
 
-chatInput.addEventListener('keypress', e=>{ if(e.key==='Enter') sendMessage(); });
+chatInput.addEventListener('keypress', e => { if (e.key === 'Enter') sendMessage(); });
 sendBtn.addEventListener('click', sendMessage);
-  
+
+// ===== Service Worker =====
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('/S13Chat/sw.js')
     .then(() => console.log('Service Worker registered'));
 }
-
 </script>
+
 </body>
 </html>
