--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>S13Chat — Discord-style</title>
   <meta name="description" content="S13Chat — Discord-style chat using JSONBin backend" />
   <link rel="stylesheet" href="style.css" />
+  <script type="module" src="app.js"></script>
 </head>
 <body>
   <div id="app" class="app-root">
